--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -174,6 +174,12 @@
           right: 0.25rem;
           left: auto;
         }
+
+        .screenshot-logo img {
+          bottom: -3rem;
+          left: -3rem;
+          right: auto;
+        }
       }
 
       .timeline-blip {
@@ -231,12 +237,28 @@
         }
       }
 
-      .screenshot > img {
-        box-sizing: border-box;
-        width: 20.0rem;
-        height: 20.0rem;
-        border: 4px solid var(--primary-container, #1373D9);
-        border-radius: 0.5625rem;
+      .screenshot {
+        position: relative;
+
+        img {
+          box-sizing: border-box;
+          width: 20.0rem;
+          height: 20.0rem;
+          border: 4px solid var(--primary-container, #1373D9);
+          border-radius: 0.5625rem;
+          box-shadow: 0 2px 16px 0 #00000040;
+        }
+
+        .screenshot-logo img {
+          position: absolute;
+
+          width: 6.25rem !important;
+          height: 6.25rem !important;
+          border: 0;
+          bottom: -3rem;
+          right: -3rem;
+          box-shadow: none;
+        }
       }
     }
 
@@ -258,10 +280,18 @@
           position: relative;
         }
 
-        .screenshot > img {
-          width: 18rem;
-          height: 18rem;
+        .screenshot {
+          img {
+            width: 18rem;
+            height: 18rem;
+          }
+
+          .screenshot-logo img {
+            bottom: -3rem;
+            right: -1rem;
+          }
         }
+
 
         &.reverse {
           flex-direction: column-reverse;
@@ -271,6 +301,13 @@
             flex-direction: row-reverse;
             left: 8.1rem;
             position: relative;
+          }
+
+          .screenshot {
+            .screenshot-logo img {
+              bottom: -3rem;
+              left: -1rem;
+            }
           }
         }
 
