Initial sticker placements

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -164,6 +164,73 @@
       // We want negative margins here
       margin-top: calc(-1 * var(--feature-margin));
 
+      .stickers {
+        position: static;
+
+        div {
+          position: absolute;
+        }
+
+        .sticker-im {
+          left: 11.75rem;
+          top: -2rem;
+        }
+
+        .sticker-dial-up {
+          left: 3rem;
+        }
+
+        .sticker-chat {
+          left: 25rem;
+          bottom: -3.5rem;
+        }
+
+        .sticker-envelope {
+          bottom: 6rem;
+          left: 1.5rem;
+        }
+
+        .sticker-envelope-2 {
+          right: 1.5rem;
+          bottom: 5rem;
+        }
+
+        .sticker-envelope-3 {
+          right: .5rem;
+          bottom: 4.5rem;
+        }
+
+        .sticker-early-smart-phone {
+          left: -11rem;
+          top: 7rem;
+        }
+
+        .sticker-flip-phone {
+          left: -11rem;
+          bottom: 9rem;
+        }
+
+        .sticker-mail {
+          left: .75rem;
+          bottom: 5.5rem;
+        }
+
+        .sticker-media-player {
+          right: -9rem;
+          bottom: 7rem;
+        }
+
+        .sticker-modern-smart-phone {
+          right: -10rem;
+          top: 13rem;
+        }
+
+        .sticker-video-chat {
+          left: 12rem;
+          bottom: -1rem;
+        }
+      }
+
       // Flip some attributes
       &.reverse {
         flex-direction: row-reverse;
