--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -141,7 +141,7 @@
     background-color: var(--bg);
 
     @media (max-width: @md) {
-      height: calc(76.875rem * 2.2);
+      height: calc(76.875rem * 2);
     }
   }
 
@@ -164,6 +164,7 @@
       // We want negative margins here
       margin-top: calc(-1 * var(--feature-margin));
 
+      // Lovingly hand placed
       .stickers {
         position: static;
 
@@ -330,15 +331,31 @@
     }
 
     @media (max-width: @md) {
-      margin-top: 3.75rem;
-      gap: 10rem;
+      margin-top: -2rem;
+      gap: 0;
 
       .feature {
-        --feature-margin: 0;
+        --feature-margin: 5rem;
         flex-direction: column-reverse;
         width: 18rem;
         gap: 10rem;
         left: 0;
+
+        &.year-2004 .timeline-blip {
+
+        }
+
+        &.year-2009 .timeline-blip {
+          top: -2rem;
+        }
+
+        &.year-2018 .timeline-blip {
+          top: -4rem;
+        }
+
+        &.year-2024 .timeline-blip {
+          top: -5rem;
+        }
 
         .timeline-blip {
           flex-direction: row;
@@ -375,6 +392,76 @@
               bottom: -3rem;
               left: -1rem;
             }
+          }
+        }
+
+        // Also hand-placed, still lovingly too!
+        .stickers {
+          .sticker-im {
+            left: -1.25rem;
+            top: 8rem;
+          }
+
+          .sticker-dial-up {
+            bottom: 5rem;
+            left: 1.5rem;
+          }
+
+          .sticker-chat {
+            left: auto;
+            right: -1rem;
+            bottom: 9rem;
+          }
+
+          .sticker-envelope {
+            bottom: -3.5rem;
+            left: .5rem;
+          }
+
+          .sticker-envelope-2 {
+            bottom: -2.5rem;
+            right: 1rem;
+          }
+
+          .sticker-envelope-3 {
+            right: -0.5rem;
+            bottom: 0;
+          }
+
+          .sticker-early-smart-phone {
+            left: auto;
+            top: auto;
+            right: 1.5rem;
+            bottom: -2rem;
+          }
+
+          .sticker-flip-phone {
+            left: auto;
+            right: 0.5rem;
+            bottom: 0;
+          }
+
+          .sticker-mail {
+            left: 0.25rem;
+            bottom: 0;
+          }
+
+          .sticker-media-player {
+            left: 1rem;
+            right: auto;
+            bottom: -2rem;
+          }
+
+          .sticker-modern-smart-phone {
+            right: auto;
+            left: 1rem;
+            bottom: -3rem;
+            top: auto;
+          }
+
+          .sticker-video-chat {
+            left: -1rem;
+            bottom: 10rem;
           }
         }
 
@@ -456,4 +543,5 @@
     width: 30%;
     border-top: 1px solid var(--color-blue-40);
   }
+
 }
