Fix the donation button text on ~some~ mobile devices.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -572,8 +572,9 @@
       height: 6.25rem;
 
       #donate-banner-right {
-        position: relative;
-        top: -2.5rem;
+        position: absolute;
+        right: 0;
+        bottom: -.5rem;
       }
     }
   }
