Temp fix for cherry-picking

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -55,6 +55,12 @@
   }
 
   .container {
+    // Fix for cherry-pick
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+
+
     padding-top: 0;
     padding-bottom: 0;
     overflow: visible;
