Update nov24/index.html to redirect to nov24/donate/index.html
Add target="_blank" if base_url is not none for donation buttons.

Drop-in Micah's l10n-able 20 year graphic.

Hide right text on <400px screens

Contrast fix for donation button

Adjust some responsive breakpoints to better match a custom size.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -5,7 +5,7 @@
   --bg: #FEFFFF;
 
   // Override our breakpoint here so that it breaks just before hitting the screenshot logo
-  @md: 54.375rem; // 870px
+  @logo-md: 54.375rem; // 870px
 
   // Prefer webp over the jpeg
   --bg-img: url('/media/img/thunderbird/appeal/nov24/background-image-high-res.jpeg');
@@ -25,6 +25,10 @@
   #main-content {
     max-width: 100%;
     overflow: hidden;
+  }
+
+  .section-text {
+    max-inline-size: 90%;
   }
 
   h1, h1 span {
@@ -74,9 +78,66 @@
     padding-top: 3.75rem;
   }
 
-  .header-graphic {
-    max-width: 33.5rem;
-    margin: auto;
+  #header-graphic {
+    box-sizing: border-box;
+    position: relative;
+    display: grid;
+    filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.3));
+    place-items: center;
+    isolation: isolate;
+    margin-top: 2rem;
+    margin-bottom: -2rem;
+
+
+    & img {
+      box-sizing: border-box;
+
+      width: 200px;
+      max-width: 100%;
+      z-index: 2;
+    }
+
+    span {
+      box-sizing: border-box;
+
+      color: #19518F;
+      font-size: 2.5rem;
+      font-family: Metropolis, sans-serif;
+      font-weight: 600;
+      line-height: 1;
+      /*
+      margin-block-start: calc(-1lh - 0.5rem - 1px);
+      height: calc(1lh + 0.5rem);
+      */
+      // Re-position it instead of using margin so height works with word-wrap.
+      top: -3.25rem;
+      position: relative;
+      word-wrap: anywhere;
+      // Image-size
+      min-width: 12.40625rem; //198.5px;
+
+      background: white;
+      padding: 0.5rem;
+      border-radius: 9px;
+      text-transform: uppercase;
+      z-index: 2;
+    }
+
+    &::before {
+      box-sizing: border-box;
+
+      content: '';
+      position: absolute;
+      inset-inline: 0;
+      margin-inline: auto;
+      //inset-block-end: 1lh;
+      bottom: 4.75rem;
+      height: 8px;
+      max-width: 800px;
+      display: block;
+      background: linear-gradient(to right, transparent, white, transparent);
+      z-index: 1;
+    }
   }
 
   .footer-graphic {
@@ -105,10 +166,6 @@
     margin-top: 4rem;
     margin-bottom: 0;
     padding: 2.0rem 2.5rem;
-
-    p {
-      max-inline-size: 90%;
-    }
 
     b {
       font-weight: 700;
@@ -158,7 +215,7 @@
     height: 76.875rem;
     background-color: var(--bg);
 
-    @media (max-width: @md) {
+    @media (max-width: @logo-md) {
       height: calc(76.875rem * 2);
     }
   }
@@ -348,7 +405,7 @@
       }
     }
 
-    @media (max-width: @md) {
+    @media (max-width: @logo-md) {
       margin-top: -2rem;
       gap: 0;
 
@@ -573,6 +630,28 @@
     font-family: 'Metropolis', sans-serif;
     margin-bottom: 2rem;
 
+    #donate-banner-left {
+      text-shadow: 0 2px 0 #af1e1e,
+        0 -2px 0 #af1e1e,
+      2px 0 0 #af1e1e,
+      -2px 0 0 #af1e1e,
+      2px 2px 0 #af1e1e,
+        -2px -2px 0 #af1e1e,
+        2px -2px 0 #af1e1e,
+      -2px 2px 0 #af1e1e;
+    }
+
+    #donate-banner-right {
+      text-shadow: 0 2px 0 #ffecea,
+        0 -2px 0 #ffecea,
+      2px 0 0 #ffecea,
+      -2px 0 0 #ffecea,
+      2px 2px 0 #ffecea,
+        -2px -2px 0 #ffecea,
+        2px -2px 0 #ffecea,
+      -2px 2px 0 #ffecea;
+    }
+
 
     @media (max-width: @md) {
       height: 6.25rem;
@@ -586,7 +665,7 @@
         position: absolute;
         right: 0;
         bottom: -.5rem;
-        font-size: ~"clamp(1.25rem, 0.6429rem + 1.7857vw, 1.5rem)";
+        font-size: ~"clamp(1rem, 0.6429rem + 1.7857vw, 1.5rem)";
         // Up the weight by 100
         font-weight: 400;
 
@@ -597,10 +676,10 @@
       }
     }
 
-    @media (max-width: @xs) {
+    @media (max-width: @xxs) {
       // Deepen the font-colour to help with contrast issues
       #donate-banner-right {
-        color: var(--txt);
+        display: none;
       }
     }
   }
