--- a/assets/less/new-style.less
+++ b/assets/less/new-style.less
@@ -7,6 +7,7 @@
 /*-------------------------
 * Media Queries
 *--------------------------*/
+@xxs: 25rem;    // 400px
 @xs: 30rem;     // 480px
 @sm: 40rem;     // 640px
 @md: 48rem;     // 768px
