--- a/assets/less/appeal-128.less
+++ b/assets/less/appeal-128.less
@@ -8,7 +8,7 @@
 /*-------------------------
 * Media Queries
 *--------------------------*/
-@xxs: 20rem; // 320px (minimum supported size)
+@xxs: 25rem; // 400px
 @xs: 30rem; // 480px
 @sm: 40rem; // 640px
 @md: 48rem; // 768px
