--- a/sites/www.thunderbird.net/includes/macros/download-mobile.html
+++ b/sites/www.thunderbird.net/includes/macros/download-mobile.html
@@ -8,7 +8,7 @@
     href="{{ download_url(platform_os='gplay', channel='mobile') }}"
     data-donate-redirect="download-{{ channel or 'esr' }}"
     data-donate-content="post_download"
-    data-donate-link="{{ redirect_donate_url(content='post_download', download=True, download_channel=channel or 'esr') }}"
+    data-donate-link="{{ redirect_donate_url(content='post_download', download=True, download_channel=channel or 'esr', form_id=settings.FRU_FORM_IDS['tfa']) }}"
   >
     <span class="download-icon" aria-hidden="true">{{ svg('base/icons/download/googleplay-currentcolor') }}</span>
     {{ _('Google Play') }}
@@ -20,7 +20,7 @@
     href="{{ download_url(platform_os='fdroid', channel='mobile') }}"
     data-donate-redirect="download-{{ channel or 'esr' }}"
     data-donate-content="post_download"
-    data-donate-link="{{ redirect_donate_url(content='post_download', download=True, download_channel=channel or 'esr') }}"
+    data-donate-link="{{ redirect_donate_url(content='post_download', download=True, download_channel=channel or 'esr', form_id=settings.FRU_FORM_IDS['tfa']) }}"
   >
     <span class="download-icon" aria-hidden="true">{{ svg('base/icons/download/fdroid-currentcolor') }}</span>
     {{ _('F-Droid') }}
@@ -28,7 +28,7 @@
   #}
 </div>
 {% if show_donate_footer %}
-<small>{{_('Free forever.')}} <a class="dotted" href="{{ donate_url('header') }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
+<small>{{_('Free forever.')}} <a class="dotted" href="{{ donate_url('header', form_id=settings.FRU_FORM_IDS['tfa']) }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
 {% endif %}
 </div>
 {%- endmacro %}
