--- a/sites/updates.thunderbird.net/includes/javascript-metadata.html
+++ b/sites/updates.thunderbird.net/includes/javascript-metadata.html
@@ -2,6 +2,7 @@
 <script>
   // Legacy
   window.siteLocale = "{{ LANG }}";
+  window._site_id = 'utn';
   // New & namespaced!
   window._utn = {
     matomoSiteId: {{ matomo_site_id }},
