Adjust the colour of the appeal footer donation button.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -43,6 +43,11 @@
       position: relative;
       top: .01rem;
     }
+
+    // Fix the button text colour
+    &:hover {
+      color: #af1e1e;
+    }
   }
 
   .section-text {
