--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -66,8 +66,10 @@
   }
 }
 
-// Homepage hack
-.page-index .btn-no-bg {
+// Hack for the fancy "dark" hover states
+.page-index .btn-no-bg,
+.page-desktop .btn-no-bg,
+.page-mobile .btn-no-bg{
   --btn-background-color: rgba(0, 0, 0, 0.8);
   @btn-no-bg-styling();
 }
