Clean up and fix some issues when root font-size isn't 16px.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -116,8 +116,7 @@
 
     & img {
       box-sizing: border-box;
-
-      width: 200px;
+      width: 12.5rem;
       max-width: 100%;
       z-index: 2;
     }
@@ -130,10 +129,7 @@
       font-family: Metropolis, sans-serif;
       font-weight: 600;
       line-height: 1;
-      /*
-      margin-block-start: calc(-1lh - 0.5rem - 1px);
-      height: calc(1lh + 0.5rem);
-      */
+
       // Re-position it instead of using margin so height works with word-wrap.
       top: -3.25rem;
       position: relative;
@@ -155,10 +151,9 @@
       position: absolute;
       inset-inline: 0;
       margin-inline: auto;
-      //inset-block-end: 1lh;
       bottom: 4.75rem;
-      height: 8px;
-      max-width: 800px;
+      height: 0.5rem;
+      max-width: 50.0rem;
       display: block;
       background: linear-gradient(to right, transparent, white, transparent);
       z-index: 1;
