--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -61,7 +61,7 @@
     color: var(--txt);
     line-height: 1;
     margin: 0;
-    text-shadow: 0 4px 8px #1A202C;
+    text-shadow: 0 0.25rem 0.5rem #1A202C;
   }
 
   h1 {
@@ -107,7 +107,7 @@
     box-sizing: border-box;
     position: relative;
     display: grid;
-    filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0 0.25rem 0.75rem rgba(0, 0, 0, 0.3));
     place-items: center;
     isolation: isolate;
     margin-top: 2rem;
@@ -139,7 +139,7 @@
 
       background: white;
       padding: 0.5rem;
-      border-radius: 9px;
+      border-radius: 0.5625rem;
       text-transform: uppercase;
       z-index: 2;
     }
@@ -165,6 +165,7 @@
     margin-top: 2rem;
     right: 0.6rem;
     position: relative;
+    width: 17.75rem;
 
     @media (max-width: @md) {
       margin-top: 7.5rem;
@@ -174,7 +175,7 @@
   .copy-section {
     box-sizing: border-box;
     text-align: left;
-    box-shadow: 0px 4px 24px 0px #1A202C;
+    box-shadow: 0 0.25rem 1.5rem 0 #1A202C;
 
     font-family: 'Inter', sans-serif;
     font-size: 1.0rem;
@@ -218,7 +219,7 @@
     position: relative;
     width: 4.0rem;
     height: 1.0rem;
-    top: -0.25px;
+    top: -0.015625rem;
 
     svg {
       position: absolute;
@@ -263,65 +264,104 @@
       .stickers {
         position: static;
 
+        img {
+          width: 100%;
+        }
+
         div {
           position: absolute;
         }
 
         .sticker-im {
+          width: 3.75rem;
+          height: 3.75rem;
+
           left: 11.75rem;
           top: -2rem;
         }
 
         .sticker-dial-up {
+          width: 4.4375rem;
+          height: 4.5625rem;
           left: 3rem;
         }
 
         .sticker-chat {
+          width: 5.25rem;
+          height: 4.9375rem;
+
           left: 25rem;
           bottom: -3.5rem;
         }
 
         .sticker-envelope {
-          bottom: 6rem;
-          left: 1.5rem;
+          width: 3.375rem;
+          height: 2.5625rem;
+
+          bottom: 6.25rem;
+          left: 1rem;
         }
 
         .sticker-envelope-2 {
+          width: 3.3125rem;
+          height: 3.75rem;
+
           right: 1.5rem;
-          bottom: 5rem;
+          bottom: 5.35rem;
         }
 
         .sticker-envelope-3 {
+          width: 5.3125rem;
+          height: 3.875rem;
+
           right: .5rem;
-          bottom: 4.5rem;
+          bottom: 4.75rem;
         }
 
         .sticker-early-smart-phone {
+          width: 4.9375rem;
+          height: 7.4375rem;
+
           left: -11rem;
           top: 7rem;
         }
 
         .sticker-flip-phone {
+          width: 6.625rem;
+          height: 7.8125rem;
+
           left: -11rem;
           bottom: 9rem;
         }
 
         .sticker-mail {
+          width: 4.0rem;
+          height: 3.0rem;
+
           left: .75rem;
-          bottom: 5.5rem;
+          bottom: 5.75rem;
         }
 
         .sticker-media-player {
+          width: 4.8125rem;
+          height: 6.125rem;
+
           right: -9rem;
           bottom: 7rem;
         }
 
         .sticker-modern-smart-phone {
+          width: 4.9375rem;
+          height: 7.4375rem;
+
           right: -10rem;
           top: 13rem;
         }
 
         .sticker-video-chat {
+          width: 4.625rem;
+          height: 4.0625rem;
+
           left: 12rem;
           bottom: -1rem;
         }
@@ -361,7 +401,7 @@
           line-height: 2.0rem;
           margin: 0;
           display: block;
-          text-shadow: 0 4px 4px #00000040;
+          text-shadow: 0 0.25rem 0.25rem #00000040;
           min-width: 5.75rem;
         }
 
@@ -373,7 +413,7 @@
           align-items: center;
           z-index: 1;
 
-          --shadow: 0 2px 10px 0 #00000040;
+          --shadow: 0 0.25rem 0.625rem 0 #00000040;
 
           .blip {
             position: relative;
@@ -407,9 +447,9 @@
           box-sizing: border-box;
           width: 20.0rem;
           height: 20.0rem;
-          border: 4px solid var(--primary-container, #1373D9);
+          border: 0.25rem solid var(--primary-container, #1373D9);
           border-radius: 0.5625rem;
-          box-shadow: 0 2px 16px 0 #00000040;
+          box-shadow: 0 0.125rem 1.0rem 0 #00000040;
         }
 
         .screenshot-logo img {
@@ -509,18 +549,18 @@
           }
 
           .sticker-envelope {
-            bottom: -3.5rem;
+            bottom: -2.75rem;
             left: .5rem;
           }
 
           .sticker-envelope-2 {
-            bottom: -2.5rem;
+            bottom: -1.75rem;
             right: 1rem;
           }
 
           .sticker-envelope-3 {
-            right: -0.5rem;
-            bottom: 0;
+            right: -0.25rem;
+            bottom: 1rem;
           }
 
           .sticker-early-smart-phone {
@@ -537,8 +577,8 @@
           }
 
           .sticker-mail {
-            left: 0.25rem;
-            bottom: 0;
+            left: 0.15rem;
+            bottom: 0.75rem;
           }
 
           .sticker-media-player {
@@ -580,7 +620,7 @@
     color: var(--color-red-30);
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    gap: 32px;
+    gap: 2.0rem;
     align-items: center;
     margin-top: 2em;
     width: 100%;
@@ -590,21 +630,21 @@
 
   .heart-svg {
     position: relative;
-    top: -4px;
+    top: -0.25rem;
   }
 
   .line {
     display: block;
-    height: 1px;
+    height: 0.0625rem;
     width: 100%;
-    border-top: 1px solid var(--color-blue-40);
+    border-top: 0.0625rem solid var(--color-blue-40);
   }
 
   .left-lines,
   .right-lines {
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    gap: 0.375rem;
     justify-self: stretch;
     // If smol, hide!
     overflow: hidden;
@@ -616,24 +656,31 @@
 
   .left-lines > .line:nth-child(2) {
     width: 50%;
-    margin-right: 3px;
-    border-top: 1px solid var(--color-blue-40);
+    margin-right: 0.1875rem;
+    border-top: 0.0625rem solid var(--color-blue-40);
   }
 
   .left-lines > .line:nth-child(1) {
     width: 30%;
-    border-top: 1px solid var(--color-blue-40);
+    border-top: 0.0625rem solid var(--color-blue-40);
   }
 
   .right-lines > .line:nth-child(2) {
     width: 50%;
-    margin-left: 3px;
-    border-top: 1px solid var(--color-blue-40);
+    margin-left: 0.1875rem;
+    border-top: 0.0625rem solid var(--color-blue-40);
   }
 
   .right-lines > .line:nth-child(1) {
     width: 30%;
-    border-top: 1px solid var(--color-blue-40);
+    border-top: 0.0625rem solid var(--color-blue-40);
+  }
+
+  #decoration {
+    left: -3.4375rem;
+    gap: 0.1875rem;
+    height: 5.625rem;
+    width: 31.25rem;
   }
 
   // Donation button overrides
@@ -641,32 +688,44 @@
     border-radius: 0.75rem;
     --background-left: linear-gradient(180deg, #DC2626 20.11%, #761414 100%);
     --background-right: linear-gradient(180deg, #FFFFFF 0.41%, #FFE8E6 100.41%);
-    box-shadow: 0px 0px 10px 0px #0000001A;
-    border: 1px solid var(--critical-pressed, #7F1D1D);
+    box-shadow: 0 0 0.625rem 0 #0000001A;
+    border: 0.0625rem solid var(--critical-pressed, #7F1D1D);
     color: #7F1D1D;
     font-family: 'Metropolis', sans-serif;
-    margin-bottom: 2rem;
+    margin: -7.125rem auto 2rem;
+    max-width: 28.875rem;
+    min-height: 7.6875rem;
+
+    &::after {
+      top: -13.125rem;
+      left: -13.75rem;
+      height: 26.25rem;
+      width: 26.25rem;
+    }
 
     #donate-banner-left {
-      text-shadow: 0 2px 0 #af1e1e,
-        0 -2px 0 #af1e1e,
-      2px 0 0 #af1e1e,
-      -2px 0 0 #af1e1e,
-      2px 2px 0 #af1e1e,
-        -2px -2px 0 #af1e1e,
-        2px -2px 0 #af1e1e,
-      -2px 2px 0 #af1e1e;
+      padding: 0.6875rem 0.75rem;
+      text-shadow: 0 0.25rem 0 #af1e1e,
+        0 -0.25rem 0 #af1e1e,
+      0.25rem 0 0 #af1e1e,
+      -0.25rem 0 0 #af1e1e,
+      0.25rem 0.25rem 0 #af1e1e,
+        -0.25rem -0.25rem 0 #af1e1e,
+        0.25rem -0.25rem 0 #af1e1e,
+      -0.25rem 0.25rem 0 #af1e1e;
     }
 
     #donate-banner-right {
-      text-shadow: 0 2px 0 #ffecea,
-        0 -2px 0 #ffecea,
-      2px 0 0 #ffecea,
-      -2px 0 0 #ffecea,
-      2px 2px 0 #ffecea,
-        -2px -2px 0 #ffecea,
-        2px -2px 0 #ffecea,
-      -2px 2px 0 #ffecea;
+      padding: 1.0625rem 0.75rem;
+      padding-inline-start: 0.1875rem;
+      text-shadow: 0 0.25rem 0 #ffecea,
+        0 -0.25rem 0 #ffecea,
+      0.25rem 0 0 #ffecea,
+      -0.25rem 0 0 #ffecea,
+      0.25rem 0.25rem 0 #ffecea,
+        -0.25rem -0.25rem 0 #ffecea,
+        0.25rem -0.25rem 0 #ffecea,
+      -0.25rem 0.25rem 0 #ffecea;
     }
 
 
