Fix timeline connector, and bottom logo at logo-md size.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -167,6 +167,10 @@
     position: relative;
     width: 17.75rem;
 
+    @media (max-width: @logo-md) {
+      right: 0.3rem;
+      margin-top: 8rem;
+    }
     @media (max-width: @md) {
       margin-top: 7.5rem;
     }
@@ -219,7 +223,7 @@
     position: relative;
     width: 4.0rem;
     height: 1.0rem;
-    top: -0.015625rem;
+    top: -0.25rem;
 
     svg {
       position: absolute;
