Fix footer logo

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -167,8 +167,11 @@
     position: relative;
     width: 17.75rem;
 
+    img {
+      width: 100%;
+    }
+
     @media (max-width: @logo-md) {
-      right: 0.3rem;
       margin-top: 8rem;
     }
     @media (max-width: @md) {
