Revert text-shadow rem -> px due to glitching.

--- a/assets/less/appeals/nov24.less
+++ b/assets/less/appeals/nov24.less
@@ -712,27 +712,27 @@
 
     #donate-banner-left {
       padding: 0.6875rem 0.75rem;
-      text-shadow: 0 0.25rem 0 #af1e1e,
-        0 -0.25rem 0 #af1e1e,
-      0.25rem 0 0 #af1e1e,
-      -0.25rem 0 0 #af1e1e,
-      0.25rem 0.25rem 0 #af1e1e,
-        -0.25rem -0.25rem 0 #af1e1e,
-        0.25rem -0.25rem 0 #af1e1e,
-      -0.25rem 0.25rem 0 #af1e1e;
+      text-shadow: 0 2px 0 #af1e1e,
+        0 -2px 0 #af1e1e,
+      2px 0 0 #af1e1e,
+      -2px 0 0 #af1e1e,
+      2px 2px 0 #af1e1e,
+        -2px -2px 0 #af1e1e,
+        2px -2px 0 #af1e1e,
+      -2px 2px 0 #af1e1e;
     }
 
     #donate-banner-right {
       padding: 1.0625rem 0.75rem;
       padding-inline-start: 0.1875rem;
-      text-shadow: 0 0.25rem 0 #ffecea,
-        0 -0.25rem 0 #ffecea,
-      0.25rem 0 0 #ffecea,
-      -0.25rem 0 0 #ffecea,
-      0.25rem 0.25rem 0 #ffecea,
-        -0.25rem -0.25rem 0 #ffecea,
-        0.25rem -0.25rem 0 #ffecea,
-      -0.25rem 0.25rem 0 #ffecea;
+      text-shadow: 0 2px 0 #ffecea,
+        0 -2px 0 #ffecea,
+      2px 0 0 #ffecea,
+      -2px 0 0 #ffecea,
+      2px 2px 0 #ffecea,
+        -2px -2px 0 #ffecea,
+        2px -2px 0 #ffecea,
+      -2px 2px 0 #ffecea;
     }
 
 
